# shard

./: Cargo.toml  README.md  Run-Shard.bat  Run-Shard.command  install.sh
.github/workflows/: build.yml
src/: app.rs  lib.rs  main.rs  main.slint  updater.rs  worker.rs
src/tui/: mod.rs  state.rs
ui/assets/: icon.icns
