[package]
name = "shard"
version = "0.1.0"
edition = "2021"
authors = ["AVABODA TOOLS"]
description = "High-performance PDF to WebP/SVG converter — CLI"
license = "MIT"

[dependencies]
rayon = "1.10"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
tempfile = "3.15"
webp = "0.1"
usvg = { version = "0.44", default-features = false, features = ["text"] }
roxmltree = "0.20"
ssimulacra2 = "0.5.1"
pdfium-render = { version = "0.8", optional = true, default-features = false, features = ["bindings"] }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
pdfium = ["dep:pdfium-render"]
